[package]
name = "astronomy-engine-bindings"
version = "2.1.19"
edition = "2021"
license = "MIT"
description = "Rust bindings for [astronomy-engine](https://github.com/cosinekitty/astronomy) using [bindgen](https://github.com/rust-lang/rust-bindgen)."
homepage = "https://github.com/maxb2/astronomy-engine-rs"
repository = "https://github.com/maxb2/astronomy-engine-rs"
readme = "README.md"

[dependencies]
libc = "0.2.161"

[build-dependencies]
bindgen = "0.65.1"
cc = "1.1.31"